# certus-showcase-a

./: .cursorrules  .gitignore  .markdownlint.json  .secrets.env.example  .setup-complete.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.ruler/: 00-project.md  10-principles.md  11-verification.md  12-epistemic.md  13-code-quality.md  14-debugging.md  15-output-format.md  16-python.md  ruler.toml
dashboard/: README.md
data/: README.md
docs/: architecture.md  demo-walkthrough.md  exploration-report.md  quality-framework.md
exploration/: 20260112_ingest.ipynb
exploration/scripts/: ingest_api_adresse.py
scripts/: setup_env.sh
src/: __init__.py
src/config/: env.py
src/quality/: __init__.py
tests/unit/: test_config.py
